# cacoca

./: README.md  pyproject.toml
cacoca/calc/: calc_cost_and_emissions.py
cacoca/output/: plot_price_scenarios.py  plot_stacked_bars.py  plot_tools.py
cacoca/setup/: read_input.py
config/: config_slides_posted.yml  posted_config_cement.yml  posted_config_slides.yml  posted_config_steel.yml  posted_routes_cement.yml  posted_routes_steel.yml
data/scenarios/basic/: prices_fuels.csv
posted_coupling/: plot_slides_posted.py  routes.py  run_posted.py
